// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Radio default 1`] = `
<div>
  <div
    className="MuiFormControl-root"
  >
    <div
      className="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root makeStyles-labelRoot-88"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-101 MuiRadio-root makeStyles-root-86 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-104"
              disabled={false}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.201 22.5 12 22.5zm0 1.5C5.373 24 0 18.627 0 12S5.373 0 12 0s12 5.373 12 12-5.373 12-12 12z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label makeStyles-label-89 MuiTypography-body1"
        >
          1
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root makeStyles-labelRoot-88"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-101 MuiRadio-root makeStyles-root-86 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-104"
              disabled={false}
              onChange={[Function]}
              type="radio"
              value="2"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.201 22.5 12 22.5zm0 1.5C5.373 24 0 18.627 0 12S5.373 0 12 0s12 5.373 12 12-5.373 12-12 12z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label makeStyles-label-89 MuiTypography-body1"
        >
          2
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Radio with error 1`] = `
<div>
  <div
    className="MuiFormControl-root"
  >
    <div
      className="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root makeStyles-labelRoot-256"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-269 MuiRadio-root makeStyles-root-254 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-272"
              disabled={false}
              onChange={[Function]}
              type="radio"
              value="1"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.201 22.5 12 22.5zm0 1.5C5.373 24 0 18.627 0 12S5.373 0 12 0s12 5.373 12 12-5.373 12-12 12z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label makeStyles-label-257 MuiTypography-body1"
        >
          1
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root makeStyles-labelRoot-256"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-269 MuiRadio-root makeStyles-root-254 MuiRadio-colorSecondary MuiIconButton-colorSecondary"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label"
          >
            <input
              checked={false}
              className="PrivateSwitchBase-input-272"
              disabled={false}
              onChange={[Function]}
              type="radio"
              value="2"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.201 22.5 12 22.5zm0 1.5C5.373 24 0 18.627 0 12S5.373 0 12 0s12 5.373 12 12-5.373 12-12 12z"
              />
            </svg>
          </span>
        </span>
        <span
          className="MuiTypography-root MuiFormControlLabel-label makeStyles-label-257 MuiTypography-body1"
        >
          2
        </span>
      </label>
    </div>
    <p
      className="MuiFormHelperText-root FormHelperText-helperText-327 FormHelperText-error-328 Mui-error"
    >
      Error
    </p>
  </div>
</div>
`;
